Fixed the issue with trying to place an atom in a hexagon that was covered by a sphere of influence

--- a/src/main/resources/Scene.css
+++ b/src/main/resources/Scene.css
@@ -1,15 +1,15 @@
 .button {
-    -fx-background-color: linear-gradient(to bottom left, #00FFFF, #FF10F0); /* Neon blue background */
-    -fx-border-color: #00FFFF; /* Neon blue border */
-    -fx-border-width: 1px; /* Adjust as needed */
-    -fx-border-radius: 2px; /* Adjust as needed */
-    -fx-font-size: 16px; /* Adjust as needed */
-    -fx-text-fill: #FFFF00; /* Neon yellow text */
-    -fx-padding: 10px 20px; /* Adjust as needed */
-    -fx-effect: innershadow(gaussian, #000000, 1, 1.0, 0, 0); /* 3D effect */
-    -fx-shape: "M0,0 L10,0 L10,10 L0,10 Z"; /* Pixelated shape */
+    -fx-background-color: linear-gradient(to bottom left, #00FFFF, #FF10F0);
+    -fx-border-color: #00FFFF;
+    -fx-border-width: 1px;
+    -fx-border-radius: 10px; /* Adjust the radius for curved corners */
+    -fx-font-size: 16px;
+    -fx-text-fill: white; /* White text color */
+    -fx-padding: 10px 20px;
+    -fx-effect: innershadow(gaussian, #000000, 1, 1.0, 0, 0);
     -fx-font-weight: bold;
 }
+
 
 .anchor-pane{
     -fx-background-color: black;
